fixed a spacing issue with titles

--- a/themes/thunderplains/source/stylesheets/thunderplains.styl
+++ b/themes/thunderplains/source/stylesheets/thunderplains.styl
@@ -329,13 +329,13 @@ header
         .schedule-talk
           float: left
           width: 33.3%
-          height: 90px
+          height: 105px
 .schedule-talk
   .schedule-title
     h3
       font-size: 20px
       color: $purple-dark
-      margin-bottom: 0
+      margin-bottom: 5px
     h4
       font-size: 15px
       color: $green-light
